# horoscopes

./: .env.example  .gitignore  Dockerfile  README.md  config.py  docker-compose.yaml  main.py  pyproject.toml
migrations/: env.py
migrations/versions/: 652d558eef02_database_creation.py  d2dc5ff7be81_add_tables.py
src/: api.py  broker.py  generate.py  schemas.py  vkapi.py
src/db/: database.py  models.py
