[tool.poetry]
name = "horoscopes"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
SQLAlchemy = "^2.0.31"
alembic = "^1.13.2"
redis = "^5.0.7"
aiohttp = "^3.9.5"
asyncio = "^3.4.3"
asyncpg = "^0.29.0"
pydantic = "^2.8.2"
pydantic-settings = "^2.3.4"
requests = "^2.32.3"
asgiref = "^3.8.1"
redis-cli = "^1.0.1"
taskiq = "^0.11.6"
taskiq-redis = "^1.0.0"
uvicorn = "^0.30.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
